# clawai

./: -E  .dockerignore  .env.development  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  CONTRIBUTING.md  ClawAI.lnk  ClawAI.vbs  ClawAI项目介绍.pptx  DEPLOYMENT.md  Dockerfile  LICENSE.md  Makefile  P0-11完成报告.md  P0阶段进度报告.md  P1阶段完成评估报告.md  P2阶段完成情况详细评估报告.md  P2阶段实施计划.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SUBMISSION_CHECKLIST.md  TECHNICAL_RESEARCH.md  USER_MANUAL.md  ai_agent.py  chat.ps1  clawai-modern.py  clawai.bat  clawai.db  clawai.py  clawai.sh  cli.py  docker-compose.prod.yml  docker-compose.yml  exploit_upload.py  frontend_backend_analysis.md  pwnkit.py  (+31 more)
.claude/: settings.local.json
.github/: ISSUE_TEMPLATE.md
.pptx-build/: generate_clawai_deck.js  package-lock.json
config/: complete_tool_list.json  config.py  config.yaml.example  modules.yaml  package-lock.json  package.json  production.env  project_config.py  prometheus.yml  rbac.json  tool_paths.yaml  tools_extended.json  vulnhub_paths.txt
ctf_benchmarks/: QUICKSTART.md  README.md
data/: dvwa_benchmark_20260410_101610.json  dvwa_benchmark_20260410_101610.txt  dvwa_benchmark_20260410_102131.json  dvwa_benchmark_20260410_102131.txt  dvwa_benchmark_20260410_102349.json  dvwa_benchmark_20260410_102349.txt  dvwa_benchmark_20260410_102642.json  dvwa_benchmark_20260410_102642.txt  dvwa_benchmark_20260410_102802.json  dvwa_benchmark_20260410_102802.txt  dvwa_benchmark_20260410_102838.json  dvwa_benchmark_20260410_102838.txt  dvwa_benchmark_20260410_102954.json  dvwa_benchmark_20260410_102954.txt  dvwa_benchmark_20260410_103229.txt  dvwa_benchmark_20260410_103406.json  dvwa_benchmark_20260410_103406.txt
docker/: Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.pentest-tools  Dockerfile.production  Dockerfile.simple  Dockerfile.tools  docker-compose-dvwa.yml  docker-compose.metasploit.yml  docker-compose.microservices.china.yml  docker-compose.microservices.yml  docker-compose.yml  nginx-site.conf  nginx.conf  prometheus.yml
docs/: architecture.md  deployment.md  plugin_marketplace_proposal.md  ppt_outline.md  regression_test_report.html  security.md  vulnhub_vulhub_compatibility.md  使用指南.md
frontend/: .env.example  DESIGN_SYSTEM.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  test-kg-simple.html  test-knowledgegraph.html  test-modern.html  test-plugin-complete.js  test-plugin.html  test-plugin.js  test-realtime.html  test-report.html  test-usermanagement.html  vite.config.js
mock_dvwa/: config.json
scripts/: add_tools_to_path.bat  ai_driven_dvwa_test.py  ai_dvwa_test_non_interactive.py  ai_dvwa_test_report_20260407_161510.json  ai_dvwa_test_simple.py  analyze_api_performance.py  analyze_dvwa_pages.py  analyze_services_diff.py  analyze_tools.py  auto_install_tools.py  backup_manager.py  bat_template.txt  build_frontend.bat  check-docker.ps1  check-docker.sh  check_tool_installation.py  cleanup_and_organize.bat  cleanup_archive_files.py  cleanup_docs_and_archive.py  cleanup_docs_directory.py  cleanup_redundant_files.py  competition_demo.py  config.py  configure-docker-mirror.ps1  container_sqlmap_dvwa_test.py  convert_to_gbk.py  create_simple_ppt.py  create_utf8_bat.py  create_utf8_no_bom.py  day6_improvement_simple.py  day6_quantitative_improvement.py  day6_tool_fixer.py  debug_sqlmap_dvwa.py  deliverables_checklist.py  demo_clawai_functionality.py  demo_clawai_simple.py  demo_cool_ui.py  demo_optimized_results.py  demo_phase1_results.py  demo_ui.py  (+80 more)
static/: index.html  simple_interface.html
tests/: conftest.py  dvwa_full_report.json  dvwa_report_template.json  dvwa_test_report.json  test_ai_agent_tool_call.py  test_chat_with_tools.py  test_intelligent_per.py  (+7 more)
(+988 files in other folders)
